# biopath-platform

./: .gitignore  README.md  SPEC.md  TECH_REPORT.md  TECH_REPORT_CN_EN.tex  biopath_build_backend.py  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: benchmark.yml  ci.yml  pages.yml
api/: main.py
biopath/: __init__.py  candidates.py  capture.py  cli.py  mapio.py  objective.py  optimizer.py  report.py  run_pipeline.py  simulator.py  viz.py  web.py
biopath/web/: app.css  app.js  index.html
docs/: COMMERCIAL_ROI_MODEL.md  GAMMA_IMPORT_PROMPT.md  METRICS_AND_PROOF.md  MULTIAGENT_PLAYBOOK.md  PITCH_QA_BANK.md  PITCH_QUICKSTART.md  REPRODUCIBILITY.md
escalations/: README.md
escalations/actions/: TEMPLATE.md
escalations/answers/: TEMPLATE.md
escalations/pending/: TEMPLATE.md  example.md
maps/: cambridgeshire_demo_farm.json  cambridgeshire_photo_informed.json
pytest/: __init__.py  __main__.py
runs/: latest.json
scripts/: auto_iterate.sh  build_photo_informed_demo_assets.py  capture_postdeploy_screenshots.mjs  escalate_to_gpt52_web.py  escalation_worker.sh  preflight_pitch_check.sh  publish_site.sh  run_benchmark.py  start_public_demo.sh  stop_public_demo.sh  summarize_delta.py  sync_pitch_from_latest.py
site/: app.css  app.js  config.json  finance-pricing.html  index.html  pitch-deck.html  pitch-script.html  quickstart-onepager.html
tests/: test_capture.py  test_cli_smoke.py  test_mapio.py  test_objective.py  test_optimizer.py  test_run_pipeline.py
typer/: __init__.py  testing.py
(+4425 files in other folders)
