[metadata]
name = biopath
version = 0.1.0
description = BioPath MVP: trap placement optimization on grid maps.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    typer

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    biopath = biopath.cli:app

[options.packages.find]
where = .
